tests/errors/unsatisfied-guarantee.expect
---CODE---
1
---STDERR---
error: source port must be available longer than the destination port requires
   ┌─ tests/errors/unsatisfied-guarantee.fil:12:9
   │
12 │   out = m0.out;
   │   ---   ^^^^^^ source is available for @[G, G+1]
   │   │      
   │   destination's requirement @[G+3, G+4]
   │
   = assignment violates constraint: G=0

Compilation failed with 1 errors.
